src/pages/InventoryPage/InventoryPage.scss
@use "../../styles/partials/variables" as *;
@use "../../styles/partials/mixins" as *;

.inventory-page {
  &__header {
    padding: 0 1.5rem;
    display: flex;
    flex-direction: column;
    border-bottom: 1px solid $color-cloud;
    padding-bottom: 1.5rem;

    @include tablet {
      flex-direction: row;
      justify-content: space-between;
      border-bottom: none;
      height: 7.5rem;
      padding: 0 2rem;
    }
  }

  &__buttons {
    display: flex;
    flex-direction: column;
    gap: 1rem;

    @include tablet {
      align-self: center;
      flex-direction: row;
    }
  }

  &__search {
    min-width: 274px;
  }

  &__add.btn--primary {
    @include tablet {
      padding: 0 1rem;
    }
  }

  &__title {
    padding-top: 2.5rem;
    padding-bottom: 1rem;

    @include tablet {
      align-self: end;
      padding-bottom: 2rem;
    }
  }
}

